# QuantSystem

./: .gitignore  BUILD_GUIDE.md  QUICK_START.md  README.md  build_cpp.sh  conftest.py  requirements.txt  setup.py  strategy_comparison_report_20250816_072609.txt  strategy_comparison_report_20251004_043737.txt  test_build.py
benchmarks/: benchmark_throughput.py  visualize_benchmark.py
cpp_core/: CMakeLists.txt  setup.py
cpp_core/bindings/: all_bindings.cpp
cpp_core/include/: fast_orderbook.hpp  order.hpp  order_executor.hpp
cpp_core/jaxbind/: bindings.cpp
cpp_core/src/: order.cpp  order_executor.cpp
cpp_trading/: __init__.py
cpp_trading2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: download_data.py
env/: __init__.py  advanced_trading_env.py  data_loader.py  env_monitor.py  system_monitor.py  trading_env.py
evaluation/: __init__.py  performance_metrics.py  pnl_analyzer.py  strategy_evaluator.py
evaluation_results/: README.md  evaluation_results.csv
examples/: ml_strategy_demo.py  ml_strategy_example.py
execution_engine/: market_simulator.py
results/benchmarks/: benchmark_results.csv
risk_control/: cvar.py  portfolio_manager.py
scripts/: evaluate_strategies.py  ml_strategy_comparison.py  quick_ml_comparison.py  set_up.sh  strategy_comparison.py  test_cpp_trading.py  test_data_infrastructure.py  test_order_executor.py  test_trading_env.py  test_trading_system.py
strategy/: ML_STRATEGIES_README.md  dl_strategies.py  market_making.py  mean_variance.py  ml_base.py  ml_strategy_adapter.py  ml_traditional.py  momentum_strategy.py  order_flow_imbalance.py  pairs_trading.py  rl_strategies.py  statistical_arbitrage.py
(+1 files in other folders)
